4.5 -> 5.0:
    - rse: do not build and install NLS data under po/ at all in case of --disable-nls
    - jbj: add new-fangled debugedit patch (#246404).
    - mgh: When the rpmfc_magic_path is not set or can't be expanded, act as if there is no magic file
    - mgh: add lib32 as a valid directory in rpmfc
    - mgh: change uses of @USRLIBRPM@ to %{_usrlibrpm} (needed for runtime relocation)
    - mgh: ensure the rpm python module is linked the same as the rest of RPM
    - rse: prune the 23MB large db/docs/ third-party subtree to no longer ship it in RPM distribution tarballs.
    - rse: allow installation paths to be overridden via "configure" options --with-path-xxx.
    - rse: re-generate lib/getdate.c with newer GNU bison 2.3
    - rse: detect if a script cannot be run because fork(2) failed.
    - rse: use the "ustar" format defined by POSIX 1003.1-1988 to roll the distribution tarball.
    - mgh: resolve namespace conflict with "__stdchrnul" in fnmatch.c
    - mgh: change db3 configure wrapper to process one argument at a time
    - rse: add SQLite RPM DB support for "tmpdir=<path> excl cachesize=<bytes> pagesize=<bytes> temporary private perms=<bitmask>"
    - mgh: allow rpm to be built w/o neon
    - rse: remove unused rpmio/sexp/ sub-library
    - rse: add "errno" information to be more informative in error message when lstat(2) on verification fails.
    - rse: correctly restore SIGILL signal handler in machine detection code. 
    - pmatilaj: nuke antique Red Hat Linux "reference" "baddeps" list (in lib/depends.c)
    - rse: allow one to explicitly select the RPM DB API with --with-dbapi={db,sqlite}
    - rse: provide automatically Autoconf chosen RPM DB API selection and configuration
    - rse: allow one to build an SQLite-only RPM with "--without-db --with-sqlite=external"
    - rse: allow Berkeley-DB/SQLite-specific RPM DB per-tag parameters according to dynamically selected DB API