@@ -85,7 +85,11 @@ static FD_t rpmgiOpen(const char * path, const char * fmode)
 	/*@modifies rpmGlobalMacroContext, h_errno, internalState @*/
 {
     const char * fn = rpmExpand(path, NULL);
-    FD_t fd = Fopen(fn, fmode);
+    FD_t fd;
+
+    /* FIXME (see http://rpm5.org/community/rpm-devel/0523.html) */
+    errno = 0;
+    fd = Fopen(fn, fmode);
 
     if (fd == NULL || Ferror(fd)) {
 	rpmError(RPMERR_OPEN, _("open of %s failed: %s\n"), fn, Fstrerror(fd));
@@ -204,11 +208,8 @@ static rpmRC rpmgiLoadReadHeader(rpmgi gi)
 
 	if (rpmrc == RPMRC_OK || gi->flags & RPMGI_NOMANIFEST)
 	    break;
-#if 0
-	/* FIXME (see http://rpm5.org/community/rpm-devel/0523.html) */
 	if (errno == ENOENT)
 	    break;
-#endif
 
 	/* Not a header, so try for a manifest. */
 	gi->argv[gi->i] = NULL;		/* Mark the insertion point */
